# planetpythontelegrambot

./: README.md  pyproject.toml
blog_telegram/: .env-template  settings.py  urls.py
py_planet/: urls.py  utils.py  views.py
