[tool.poetry]
name = "repl-nix-planetpythontelegrambot-hazir-kod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_planetpythontelegrambot_hazir_kod"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
requests = "^2.32.3"
telepot = "^12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
